<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    Account Preferences-->
    <PreferenceCategory
        android:key="account"
        android:title="@string/settings_account">
        <Preference
            android:key="photo"
            android:title="@string/settings_photo" />
        <Preference
            android:key="title"
            android:summary="@string/settings_title_summary"
            android:title="@string/settings_title" />
        <EditTextPreference
            android:dialogTitle="@string/settings_password"
            android:key="password"
            android:summary="@string/settings_password_summary"
            android:title="@string/settings_password"
            />
        <EditTextPreference
            android:dialogTitle="@string/settings_wage"
            android:key="weight"
            android:title="@string/settings_wage" />
        <EditTextPreference
            android:dialogTitle="@string/settings_height"
            android:key="height"
            android:summary="@string/settings_height_summary"
            android:title="@string/settings_height" />
    </PreferenceCategory>

    <!--    Notifications Preferences-->
    <PreferenceCategory
        android:key="notifcations"
        android:title="@string/settings_notifications">

<!--        <SwitchPreference-->
<!--            android:key="all_notifications"-->
<!--            android:title="@string/settings_send_notifcations" />-->
        <SwitchPreference
            android:defaultValue="true"
            android:key="daily_notifications"
            android:title="@string/settings_daily_notifications" />
    </PreferenceCategory>

    <!--    Application Preferences-->
    <PreferenceCategory
        android:key="aplications"
        android:title="@string/settings_aplications">

        <Preference
            android:key="help"
            android:title="@string/settings_help" />
        <Preference
            android:key="about"
            android:title="@string/settings_about" />
        <Preference
            android:key="log_out"
            android:title="@string/settings_log_out" />
        <Preference
            android:key="delete_account"
            android:title="@string/settings_delete_account" />

    </PreferenceCategory>
</PreferenceScreen>