<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginRegister.RegisterActivity"

    >

    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/reg_tv_hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bebas_neue_bold"
                android:text="@string/reg_tv_hello"
                android:textColor="@color/colorSecondary"
                android:textSize="73sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/reg_tv_create_your_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebas_neue_regular"
                android:text="@string/reg_tv_create_your_account"
                android:textColor="@color/colorSecondary"
                android:textSize="45sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_tv_hello" />

            <ImageView
                android:id="@+id/reg_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintTop_toBottomOf="@id/reg_tv_create_your_account" />

            <!--    Reg all information layout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/reg_bottom_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_line">

                <EditText
                    android:singleLine="true"
                    android:id="@+id/reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/reg_between"
                    android:background="@drawable/text_background"
                    android:hint="@string/reg_hint_email_address"
                    android:padding="@dimen/reg_inside"
                    android:textColor="@color/colorSecondary"
                    android:textColorHint="@color/colorSecondaryDark" />

                <EditText
                    android:singleLine="true"
                    android:id="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/reg_between"
                    android:background="@drawable/text_background"
                    android:hint="@string/reg_hint_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/reg_inside"
                    android:textColor="@color/colorSecondary" />

                <EditText
                    android:singleLine="true"
                    android:id="@+id/reg_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/reg_between"
                    android:background="@drawable/text_background"
                    android:hint="@string/reg_hint_password_confirm"
                    android:inputType="textPassword"
                    android:padding="@dimen/reg_inside"
                    android:textColor="@color/colorSecondary" />


                <EditText
                    android:singleLine="true"
                    android:id="@+id/reg_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/reg_between"
                    android:background="@drawable/text_background"
                    android:hint="@string/reg_hint_username"
                    android:padding="@dimen/reg_inside"
                    android:textColor="@color/colorSecondary" />

                <EditText
                    android:singleLine="true"
                    android:inputType="number"
                    android:id="@+id/reg_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/reg_between"
                    android:background="@drawable/text_background"
                    android:hint="@string/reg_hint_age"
                    android:padding="@dimen/reg_inside"
                    android:textColor="@color/colorSecondary" />

                <EditText
                    android:singleLine="true"
                    android:inputType="number"
                    android:id="@+id/reg_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/reg_between"
                    android:background="@drawable/text_background"
                    android:hint="@string/reg_hint_height"
                    android:padding="@dimen/reg_inside"
                    android:textColor="@color/colorSecondary" />

                <EditText
                    android:singleLine="true"
                    android:inputType="number"
                    android:id="@+id/reg_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/reg_between"
                    android:background="@drawable/text_background"
                    android:hint="@string/reg_hint_weight"
                    android:padding="@dimen/reg_inside"
                    android:textColor="@color/colorSecondary" />

                <Spinner
                    android:id="@+id/reg_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/reg_between"
                    android:background="@drawable/text_background"
                    android:entries="@array/reg_sex"
                    android:padding="@dimen/reg_inside"
                    android:popupBackground="@color/colorPrimaryLight"
                    android:textColor="@color/colorSecondary" />

            </LinearLayout>

            <!--    Bottom layout-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/reg_bottom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="4dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    android:onClick="Register"
                    android:id="@+id/reg_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_button"
                    android:elevation="6dp"
                    android:fontFamily="@font/bebas_neue_bold"
                    android:text="@string/reg_button_register"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="32sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="@id/reg_button"
                    app:layout_constraintRight_toRightOf="@id/reg_button"
                    app:layout_constraintTop_toBottomOf="@id/reg_button">

                    <TextView
                        android:id="@+id/reg_tv_got_an_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/bebas_neue_bold"
                        android:text="@string/reg_tv_got_an_account"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/reg_tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bebas_neue_bold"
                        android:onClick="goToLogin"
                        android:text="@string/reg_tv_login"
                        android:textColor="@color/colorSecondary"
                        android:textSize="20sp" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>