<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginRegister.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/log_tv_title_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas_neue_bold"
            android:text="@string/log_tv_title_one"
            android:textColor="@color/colorSecondary"
            android:textSize="73sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/log_tv_title_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas_neue_bold"
            android:text="@string/log_tv_title_two"
            android:textColor="@color/colorSecondary"
            android:textSize="73sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/log_tv_title_one" />

        <EditText
            android:id="@+id/log_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/reg_between"
            android:background="@drawable/text_background"
            android:hint="@string/reg_hint_email_address"
            android:padding="@dimen/reg_inside"
            android:singleLine="true"
            android:textColor="@color/colorSecondary"
            android:textColorHint="@color/colorSecondaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/log_tv_title_two" />

        <EditText
            android:id="@+id/log_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/reg_between"
            android:background="@drawable/text_background"
            android:hint="@string/reg_hint_password"
            android:inputType="textPassword"
            android:padding="@dimen/reg_inside"
            android:singleLine="true"
            android:textColor="@color/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/log_email" />

        <!--    Bottom layout-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/log_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/log_password"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:onClick="LogIn"
                android:id="@+id/log_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_button"
                android:elevation="6dp"
                android:fontFamily="@font/bebas_neue_bold"
                android:text="@string/log_button_login"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="32sp"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@id/log_button"
                app:layout_constraintRight_toRightOf="@id/log_button"
                app:layout_constraintTop_toBottomOf="@id/log_button">

                <TextView
                    android:id="@+id/log_tv_no_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/bebas_neue_bold"
                    android:text="@string/log_tv_no_account"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/log_tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bebas_neue_bold"
                    android:onClick="goToRegister"
                    android:text="@string/log_tv_register"
                    android:textColor="@color/colorSecondary"
                    android:textSize="20sp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>