<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Twoje Piwo"
            android:fontFamily="@font/bebas_neue_bold"
            android:textSize="32sp"
            android:textColor="@color/colorSecondary"/>
    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/beer_of_day_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toLeftOf="@id/main_linear"
            />


        <LinearLayout
            android:id="@+id/main_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/beer_of_day_background"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/imageView"
            app:layout_constraintLeft_toRightOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView">

            <TextView
                android:id="@+id/main_tv_beer_day_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebas_neue_regular"
                android:text="@string/main_beer_day_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/main_tv_beer_day_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebas_neue_bold"
                android:textColor="@color/colorSecondary"
                android:textSize="32sp"
                tools:text="HARNOLD" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <!--    Bottom of the Screen-->
    <Button
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/main_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/main_button"
        android:elevation="10dp"
        android:fontFamily="@font/bebas_neue_bold"
        android:onClick="addNewDrankBeer"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:text="@string/main_activity_button_text"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/main_drank_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/main_drank_now"
        app:layout_constraintTop_toBottomOf="@+id/main_button">

        <TextView
            android:id="@+id/main_tv_drank_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas_neue_bold"
            android:paddingEnd="5dp"
            android:text="@string/main_drank_today"
            android:textColor="@color/colorSecondary"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/main_tv_amount_drank_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas_neue_bold"
            android:textColor="@color/colorSecondary"
            android:textSize="24sp"
            tools:text="0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_drank_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/main_drank_today"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_button">

        <TextView
            android:id="@+id/main_tv_drank_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas_neue_bold"
            android:paddingEnd="5dp"
            android:text="@string/main_drank_now"
            android:textColor="@color/colorSecondary"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/main_tv_amount_drank_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas_neue_bold"
            android:textColor="@color/colorSecondary"
            android:textSize="24sp"
            tools:text="0" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>